[package]
name = "ero-blockwheel-kv-bench"
version = "0.1.14"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Benchmark utility for key/value persistent store `ero-blockwheel-kv`."
edition = "2018"

[dependencies]
ero = { git = "https://github.com/swizard0/ero.git" }
ero-blockwheel-fs = { git = "https://github.com/swizard0/ero-blockwheel-fs.git" }
ero-blockwheel-kv = { git = "https://github.com/swizard0/ero-blockwheel-kv.git" }
alloc-pool = { git = "https://github.com/swizard0/alloc-pool.git" }

log = "^0.4"
toml = "^0.5"
sled = "^0.34"
serde = "^1.0"
futures = "^0.3"
bincode = "^1.3"
structopt = "^0.3"
serde_derive = "^1.0"
pretty_env_logger = "^0.4"

rand = { version = "^0.7", features = ["small_rng"] }
tokio = { version = "^0.3", features = ["full"] }
