[package]
name = "ero-blockwheel-kv-bench"
version = "0.2.5"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Benchmark utility for key/value persistent store `ero-blockwheel-kv`."
edition = "2018"

[dependencies]
ero = { git = "https://github.com/swizard0/ero.git" }
ero-blockwheel-fs = { git = "https://github.com/swizard0/ero-blockwheel-fs.git" }
ero-blockwheel-kv = { git = "https://github.com/swizard0/ero-blockwheel-kv.git", branch = "search_tree_optimize" }
alloc-pool = { git = "https://github.com/swizard0/alloc-pool.git" }
edeltraud = { git = "https://github.com/swizard0/edeltraud.git" }

log = "^0.4"
toml = "^0.5"
sled = "^0.34"
serde = "^1.0"
futures = "^0.3"
bincode = "^1.3"
structopt = "^0.3"
serde_derive = "^1.0"
pretty_env_logger = "^0.4"

rand = { version = "^0.8", features = ["small_rng"] }
tokio = { version = "^1.0", features = ["full"] }
