[package]
name = "ero-blockwheel-kv-bench"
version = "0.3.7"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "Benchmark utility for key/value persistent store `ero-blockwheel-kv`."
edition = "2021"

[dependencies]
ero = { git = "https://github.com/swizard0/ero.git" }
edeltraud = { git = "https://github.com/swizard0/edeltraud.git" }
alloc-pool = { git = "https://github.com/swizard0/alloc-pool.git" }
arbeitssklave = { git = "https://github.com/swizard0/arbeitssklave.git" }
blockwheel-fs = { git = "https://github.com/swizard0/blockwheel-fs.git" }
blockwheel-kv-ero = { git = "https://github.com/swizard0/blockwheel-kv-ero.git" }

log = "^0.4"
toml = "^0.5"
sled = "^0.34"
serde = "^1.0"
futures = "^0.3"
bincode = "^1.3"
serde_derive = "^1.0"
pretty_env_logger = "^0.4"

rand = { version = "^0.8", features = ["small_rng"] }
clap = { version = "^3.0", features = ["cargo", "derive"] }
tokio = { version = "^1", features = ["full"] }

[profile.release]
debug = true
